@@ -4,3 +4,32 @@ icon: java
 
 # Manual
 
+You can always head to the latest release and download the `.jar` that contains the bot. Just make sure you have java 22 or higher installed and you are good to go.
+
+## Linux
+
+Sometimes console is spammed with warnings on startup, you can remove these by adding this option before -jar `--enable-native-access=ALL-UNNAMED`
+
+```sh
+sudo java -jar <file.jar>
+```
+
+## Windows
+
+{% hint style="warning" %}
+This install is not recommended and not encouraged. All errors during installation are **YOUR** responsibility
+{% endhint %}
+
+```powershell
+java -jar <file.jar>
+```
+
+## MacOS
+
+{% hint style="warning" %}
+This install is not recommended and not encouraged. All errors during installation are **YOUR** responsibility
+{% endhint %}
+
+```sh
+sudo java -jar <file.jar>
+```
